wiu.edu (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 805,
  "classifier_probability": 0.81,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 13.44,
  "homepage_snapshot_redirected_domain": "wiu.edu",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020402004742id_/http://www.wiu.edu/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020402004742id_/http%3A//wiu.edu",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "wiu.edu",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603125102id_/http%3A//www.wiu.edu/privacypolicy.shtml",
  "policy_title": "Western Illinois University Web Support Services",
  "policy_url": "wiu.edu/privacypolicy.shtml",
  "sha1": "cbe1d06e851cb97922cd6ced062f8549d4a349b4",
  "simhash": 1863281217374337580,
  "simhash_updated": false,
  "site_hostname": "wiu.edu",
  "site_url": "http://wiu.edu",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020603125102",
  "word_count": 125,
  "year": 2002
}

--- a/w/wi/wiu/wiu.edu.html
+++ b/w/wi/wiu/wiu.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wiu.edu privacy policy that was archived on 2001-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011202005322id_/http%3A//wiu.edu/privacypolicy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wiu.edu privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603125102id_/http%3A//www.wiu.edu/privacypolicy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html lang="en"><head>
 <title>Western Illinois University Web Support Services</title>
@@ -36,20 +36,31 @@ else {
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr valign="TOP" bgcolor="#e6e6e6"> 
           <td nowrap="" width="120"> 
-            <p><span class="date">
+            <p><span class="date"> 
               
-              Sat, Dec 01, 2001<br>06:53 PM
+              Mon, Jun 03, 2002<br>07:51 AM
               </span></p>
           </td>
-          <td align="right"> 
-            <form action="/cgi/users/miuniv/cgi-bin/search.cgi?0" method="POST">
-              <input type="hidden" name="start" value="0">
-              <input type="hidden" name="end" value="20">
-              <input type="text" name="search" size="15">
-              <input type="image" src="/graphics/searchbutton6.jpg" name="Submit" value="Search!" border="0" alt="Search." width="58" height="20">
-            </form>
+          <td> 
+            <!-- Search Google -->
+            <form method="GET" action="http://www.google.com/u/wiu">
+                
+              <table cellspacing="0" border="0" width="100%">
+                <tbody><tr valign="middle"> 
+                    <td> <a href="http://www.google.com/"> 
+                      <!-- <IMG SRC="http://www.google.com/logos/Logo_40wht.gif" border=0
+ALT=Google> -->
+                      </a> </td>
+                    <td align="right"> 
+                      <input type="text" name="q" size="20" maxlength="255" value="">
+                      <input type="submit" name="sa" value="Search">
+                    </td>
+                  </tr>
+                </tbody></table>
+              </form>
+            <!-- Search Google -->
           </td>
-          <td align="RIGHT">
+          <td align="RIGHT"> 
              <form method="post" action="/cgi-bin/nph-redir.cgi">
   <select name="dest" onchange="window.location.href=this.options[this.selectedIndex].value; ">
     <option value="http://www.wiu.edu/" selected="">Popular Sites</option>
@@ -69,13 +80,12 @@ else {
     Degrees</option>
     <option>-------------------</option>
     <option>FACULTY/STAFF LINKS</option>
-    <option value="http://www.wiu.edu/users/mivpas/handbook/">-Administrative 
+    <option value="http://www.wiu.edu/adminhandbook/">-Administrative 
     Handbook</option>
     <option value="http://www.wiu.edu/connection/">-Campus Connection </option>
     <option value="http://www.ccmail.wiu.edu/">-cc:Mail </option>
-    <option value="http://www.wiu.edu/users/miprov/facpol/">-Faculty Policy Manual</option>
-    <option value="http://www.wiu.edu/users/mivpas/handbook/policies/index.shtml">-University 
-    Policies </option>
+    <option value="http://www.wiu.edu/facultypolicies/">-Faculty Policy Manual</option>
+    <option value="http://www.wiu.edu/policies/">-University Policies </option>
     <option>-------------------</option>
     <option>STUDENT LINKS</option>
     <option value="http://www.wiu.edu/users/mibus/billrec.htm">-Billing</option>
@@ -87,11 +97,11 @@ else {
     </option>
     <option value="http://campusrec.wiu.edu/">-Recreation </option>
     <option value="http://www.wiu.edu/Registrar/">-Registrar</option>
-    <option value="http://www.wiu.edu/SGA/">-SGA</option>
-   <option value="http://www.student.services.wiu.edu/STARS/">-STARS</option>
+    <option value="http://www.wiu.edu/scholarships/">-Scholarships</option>
+   <option value="http://stars.wiu.edu/STARS/">-STARS</option>
+    <option value="http://www.wiu.edu/sga/">-Student Gov. Assoc.</option>
     <option value="http://www.student.services.wiu.edu/">-Student Services</option>
-    <option value="http://www.wiu.edu/users/mibus/tuitfees.htm">-Tuition &amp; Fees 
-    </option>
+    <option value="http://www.wiu.edu/tuition/">-Tuition &amp; Fees</option>
     <option>-------------------</option>
     <option value="http://www.wiu.edu/AC/links.shtml">COMPUTING LINKS</option>
     <option value="http://www.wiu.edu/ecom/">-ECOM</option>
@@ -108,16 +118,16 @@ else {
     &amp; Offices </option>
     <option value="http://www.wiu.edu/employment/">-Employment Opportunities</option>
     <option value="http://www.wiu.edu/campus/lodging.shtml">-Macomb Lodging </option>
-    <option value="http://www.wiu.edu/unews/">-News/Experts Search </option>
-    <option value="http://www.wiu.edu/users/miops/">-Office of Public Safety </option>
-    <option value="http://www.wiu.edu/users/miops/parking.shtml">-Parking Services 
-    </option>
+    <option value="http://www.wiu.edu/unews/experts.shtml">-News/Experts Search </option>
+    <option value="http://www.wiu.edu/ops/">-Office of Public Safety </option>
+    <option value="http://www.wiu.edu/ops/parking.shtml">-Parking Services </option>
     <option value="http://www.wiu.edu/Registrar/transcripts.htm">-Transcript Requests</option>
     <option value="http://www.wiu.com/bookstore/">-WIU Bookstore </option>
     <option value="http://admissions.wiu.edu/miadm/Pubs/viewbook/">-WIU Viewbook 
     </option>
   </select>
 </form>
+
           </td>
         </tr>
       </tbody></table>
@@ -127,7 +137,7 @@ else {
   <table border="0" cellpadding="0" cellspacing="0" width="585">
     <tbody><tr> 
       <td bgcolor="#E6E6E6" valign="top" nowrap="" rowspan="2" width="120">  
-<p><span class="nav"><b><a href="/academics/"><br>
+<p class="nav"><b><a href="/academics/"><br>
   Academics</a><a href="/admin/"><br>
   Administration</a><br>
   <a href="http://admissions.wiu.edu/">Admissions</a><br>
@@ -138,8 +148,7 @@ else {
   <a href="http://www.student.services.wiu.edu">Student Services</a><br>
   <a href="/extended/">WIU Quad Cities</a><br>
   <a href="/foundation/">WIU Foundation</a><br>
-  <a href="/index.shtml">WIU Home</a></b></span></p>
-<p><a href="/request_info.shtml">Request Info</a></p>
+  <a href="/index.shtml">WIU Home</a></b></p>
  </td>
       <td valign="top" colspan="2"> 
         <img src="/graphics/aboutsite.gif" width="464" height="22" alt="About this Site.">
@@ -188,7 +197,10 @@ else {
     </td>
   </tr>
   <tr> 
-    <td colspan="2" valign="BOTTOM" align="CENTER"><p><a href="mailto:info@wiu.edu">Questions/Comments</a> | Maintained by <a href="/web/">Web Support Services</a> | <a href="/privacypolicy.shtml">Privacy Policy</a><br>Copyright ©2000-2001</p>
+    <td colspan="2" valign="BOTTOM" align="CENTER"><p>Questions/Comments: <a href="mailto:info@wiu.edu">info@wiu.edu</a> | Maintained by <a href="/web/">Web Support Services</a> | <a href="/privacypolicy.shtml">Privacy Policy</a><br>
+        Copyright ©2001-2002<br>
+        <a href="/policies/affirmact.shtml">An Equal Opportunity / Affirmative 
+        Action University</a></p>
     </td>
   </tr>
 </tbody></table>
