mathforum.org (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 4259,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.85,
  "homepage_snapshot_redirected_domain": "mathforum.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330114905id_/http://mathforum.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330114905id_/http%3A//mathforum.org",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mathforum.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603125940id_/http%3A//mathforum.org/announce/privacy.html",
  "policy_title": "Math Forum: Privacy Policy",
  "policy_url": "mathforum.org/announce/privacy.html",
  "sha1": "de49118633e94a0e7a356f963c9dfa404b97086f",
  "simhash": 14795623402073882750,
  "simhash_updated": false,
  "site_hostname": "mathforum.org",
  "site_url": "http://mathforum.org",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020603125940",
  "word_count": 724,
  "year": 2002
}

--- a/m/ma/mat/mathforum.org.html
+++ b/m/ma/mat/mathforum.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mathforum.org privacy policy that was archived on 2000-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20001204045800id_/http%3A//mathforum.org/announce/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mathforum.org privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603125940id_/http%3A//mathforum.org/announce/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Math Forum: Privacy Policy</title>
@@ -7,38 +7,21 @@
 
 <body bgcolor="#FFFFFF">
 
-
-<!-- WebCT Banner Ad -->
-
 <center>
 
-<table border="0" cellpadding="0" cellspacing="0" bgcolor="#6666FF">
-	<tbody><tr>
-		<td valign="BOTTOM" align="RIGHT" rowspan="2"><a href="http://www.webct.com/"><img border="0" src="/gifs/webct/logo1.gif" alt="WebCT Logo"></a></td>
-		<td align="LEFT" valign="BOTTOM"><!--== (c) 1997 AdForce, Inc. All AdForce ad tags are the exclusive property of AdForce, Inc., and may not be used or altered without AdForce's express written permission ----><iframe width="468" height="60" noresize="" scrolling="No" frameborder="0" marginheight="0" marginwidth="0" src="http://adforce.imgis.com/?adiframe|2.0|497|197917|1|1|KEY=key1+key2+key3+key4;"><script language=javascript src="http://adforce.imgis.com/?addyn|2.0|497|197917|1|1|KEY=key1+key2+key3+key4;loc=700;"></script><noscript><a href="http://adforce.imgis.com/?adlink|2.0|497|197917|1|1|KEY=key1+key2+key3+key4;loc=300;" target=_top><img src="http://adforce.imgis.com/?adserv|2.0|497|197917|1|1|KEY=key1+key2+key3+key4;loc=300;" border=0 width=468 height=60></a></noscript></iframe></td>
-		<td valign="BOTTOM" rowspan="2"><img src="/gifs/webct/logo3.gif" align="BOTTOM" alt="."></td>
-	</tr>
-	<tr>
-		<td align="LEFT" valign="BOTTOM"><img src="/gifs/webct/logo2.gif" alt="*"></td>
-	</tr>
-</tbody></table>
+<center>
+<p><nobr><a href="http://www.drexel.edu/"><img border="0" src="/gifs/dragon_line.jpg"></a><img border="0" src="/gifs/@drexel_line.jpg"></nobr></p>
 </center>
 
-<!-- End WebCT Banner Ad --> 
 
-
-
-<br>
-
-<center>
-
-<h2>The Math Forum: Privacy Policy</h2><p>
+<h2>Privacy Policy</h2><p>
 
 <img src="/gifs/forum.blueline.gif" alt="_________________________________________________"><br>
 <a href="/whatsnew.html">What's New</a> || 
 <a href="/students/">Student Center</a> || 
 <a href="/teachers/">Teachers' Place</a><br>
-<img src="/gifs/forum.blueline.gif" alt="_________________________________________________"></p><p>
+<img src="/gifs/forum.blueline.gif" alt="_________________________________________________"><br>
+<br>
 
 <table width="580 BORDER=" 0"="">
 <tbody><tr>
@@ -49,8 +32,8 @@ and approve your use of our services. If you are under 13 and you
 participate in the Problem of the Week services or subscribe to any other
 Math Forum services, please have your teacher or parent register you for
 participation. At any time, your parents have the right to request that we
-remove your personal information by writing to <a href="mailto:removal@mathforum.com">removal@mathforum.com</a> or by
-contacting us via postal mail or telephone (800)756-7823 x200.</p>
+remove your personal information by writing to <a href="mailto:removal@mathforum.org">removal@mathforum.org</a> or by
+contacting us via postal mail or telephone (800)756-7823.</p>
 
 <h3>Privacy Policy:</h3>
 
@@ -59,56 +42,52 @@ contacting us via postal mail or telephone (800)756-7823 x200.</p>
 <p>If you visit our site to read or download information from our Web pages:</p>
 
 <ul>
-<li>We collect and keep track of only the following information about you: the name of the domain from which you access the Internet (for example, aol.com); the date and time you access our site; and the Internet address of the Web site from which you linked directly to our site. We may use your IP address to help diagnose problems with our server, and to administer our Web site. Your IP address may also be used to customize the information that you receive in order to make it most relevant to you.<p>
+<li>We collect and keep track of only the following information about you: the name of the domain from which you access the Internet (for example, aol.com); the date and time you access our site; and the Internet address of the Web site from which you linked directly to our site. We may use your IP address to help diagnose problems with our server, and to administer our Web site. Your IP address may also be used to customize the information that you receive in order to make it most relevant to you.<br><br>
 
-</p></li><li>We use the information we collect to measure the number of visitors to the different sections of our site, to help us make our site more useful to visitors, and to place advertisements and sponsorships that enable us to continue to offer our services free of charge.<p>
+</li><li>We use the information we collect to measure the number of visitors to the different sections of our site, to help us make our site more useful to visitors, and to place advertisements and sponsorships that enable us to continue to offer our services free of charge.<p>
 </p></li></ul>
 
 <p>If you identify yourself by sending an email or by providing your email address in order to participate in one of our services such as Ask Dr. Math, Problems of the Week, Teacher2Teacher, mailing lists and discussion groups, the Math Forum Internet Newsletter, and our Webmaster and online help:</p>
 
 <ul>
-<li>We use personal identifying information from users in various ways to provide the educational services and support you seek. We use your email address in order to respond to your questions and submissions or to maintain your subscriptions. We also use email in order to identify who you are and make it easy for you to be a regular user of one of our mentored services.<p>
+<li>We use personal identifying information from users in various ways to provide the educational services and support you seek. We use your email address in order to respond to your questions and submissions or to maintain your subscriptions. We also use email in order to identify who you are and make it easy for you to be a regular user of one of our mentored services.<br><br>
 
-</p></li><li>From time to time we conduct surveys of users for the purpose of evaluating the use of our Web site, and we may use your information to contact you for more information.<p>
+</li><li>From time to time we conduct surveys of users for the purpose of evaluating the use of our Web site, and we may use your information to contact you for more information.<br><br>
 
-</p></li><li>When we archive and publish solutions from the Problem of the Week services, we highlight the names of the students and schools with noteworthy submissions on our Web pages, and these may be read by the general public. We publish selected questions and responses from Ask Dr. Math, Teacher2Teacher, and other services. This published material, available to the public, may include your name.<p>
-</p></li></ul>
+</li><li>When we archive and publish solutions from the Problem of the Week
+services, we highlight the names of the students and schools with noteworthy
+submissions on our Web pages, and these may be read by the general public.
+Teachers who have registered for a Problem of the Week "teacher account"
+with us may also view information concerning the number and date of
+submissions entered by students from their school to the Problem of the Week
+projects. We publish selected questions and responses from Ask Dr. Math,
+Teacher2Teacher, and other services. This published material, available to
+the public, may include your name.<br><br>
+</li></ul>
 
 <p>At any time you may request the removal of your name or other personal
-information and contributions by writing to <a href="mailto:removal@mathforum.com">removal@mathforum.com</a> or by
-contacting us via postal mail or telephone (800)756-7823 x200.</p>
+information and contributions by writing to <a href="mailto:removal@mathforum.org">removal@mathforum.org</a> or by
+contacting us via postal mail or telephone (800)756-7823.</p>
 
 <p>We want to be very clear: We will not obtain personal identifying information about you when you visit our site unless you choose to provide such information to us.</p>
 
 <p>We do not sell our customer names, addresses, or other information to third parties for any purpose.</p>
 
-<p>This site contains links to other sites. MathForum.com is not responsible for the privacy practices or the content of such Web sites.</p>
-
-<p>We use services from WebCT and AdForce, LLC, to display ads on our site.
-Visitor data are collected and provided to WebCT and AdForce for the purpose of
-delivering relevant ads to visitors. Please refer to the privacy policies
-used by <a href="http://www.Webct.com/global/privacypolicy/">WebCT</a> and
-<a href="http://www.adforce.com/company/privacy/privacypolicy.asp">AdForce</a> for further
-information or to opt out of participation in the AdForce service. Ads may
-contain "cookies" that appear to be coming from our site. Any cookies that
-the Math Forum may use during a visit to our site are only valid for the
-duration of the visit. We do not have access to any information about you
-from the cookies you may receive while visiting our site.</p>
+<p>This site contains links to other sites. The Math Forum is not responsible for the privacy practices or the content of such Web sites.</p>
 
 <h3>Public Forums</h3>
 
-<p>This site makes mailing lists, Web discussion forums, and message boards available to its users. Please remember that any information that is disclosed in these areas becomes public, and that you should exercise caution when deciding to disclose your personal information. MathForum.com reserves the right to remove any posting that its editors consider inappropriate.</p>
+<p>This site makes mailing lists, Web discussion forums, and message boards available to its users. Please remember that any information that is disclosed in these areas becomes public, and that you should exercise caution when deciding to disclose your personal information. The Math Forum reserves the right to remove any posting that its editors consider inappropriate.</p>
 
 <hr>
 <br>
 
-<p>If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact <a href="mailto:policy@mathforum.com">policy@mathforum.com.</a></p>
+<p>If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact <a href="mailto:policy@mathforum.org">policy@mathforum.org.</a></p>
 <ul><ul>
 <p><b>Postal address:</b><br>
 The Math Forum<br>
-101 S. Chester Rd., Suite 400<br>
-P.O. Box 156<br>
-Swarthmore PA 19081-0156</p>
+3210 Cherry Street<br>
+Philadelphia, PA 19104</p>
 </ul></ul>
 </td>
 </tr>
@@ -117,46 +96,15 @@ Swarthmore PA 19081-0156</p>
 </p><p>
 </p><center>
 <p><b><a href="/announce/privacy.html">Privacy Policy</a></b></p>
-
 <img src="/forum.blueline.gif" alt="_____________________________________"><br>
-
-<a target="_top" href="/web.comments/web.comments.form.html">Suggestion Box</a> ||
-
-<a target="_top" href="/">Home</a>  ||
-
-<a target="_top" href="/library/">The Math Library</a> ||
-
-<a target="_top" href="/help.html">Help Desk</a>  ||
-
-<a target="_top" href="/special.html">Quick Reference</a> ||
-
-<a target="_top" href="/grepform.html">Search</a>
-
-<br>
-
+<a target="_top" href="/web.comments/web.comments.form.html">Suggestion Box</a>&nbsp;||&nbsp;<a target="_top" href="/">Home</a>&nbsp;||&nbsp;<a target="_top" href="/library/">The Math Library</a>&nbsp;||&nbsp;<a target="_top" href="/help.html">Help Desk</a>&nbsp;||&nbsp;<a target="_top" href="/special.html">Quick Reference</a>&nbsp;||&nbsp;<a target="_top" href="/grepform.html">Search</a><br>
 <img src="/forum.blueline.gif" alt="_____________________________________"><p>
 
-<!-- Begin footer -->
-
-<!-- Adapted from footer made by Author: Merce Crosas -->
-
-      </p><p align="center"><font face="Arial, Helvetica, sans-serif" size="-1">
-        Visit our Sponsors:</font></p>
-      <p align="center"><font face="Arial, Helvetica, sans-serif"> 
-        <a href="http://webct.com/user/ClickRedirectServlet?community=math&amp;company=amazon&amp;url=http://www.amazon.com/exec/obidos/redirect-home/webctcom" class="dark" target="_blank"><img src="http://hub-images.webct.com/images/amazon.gif" width="88" height="31" border="0" alt="Amazon site"></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="http://webct.com/user/ClickRedirectServlet?community=math&amp;company=xanedu&amp;url=http://www.xanedu.com/webct1" class="dark" target="_blank"><img src="/snippets/sponsors/thisweeks.gif" width="88" height="31" border="0" alt=""></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="http://webct.com/user/ClickRedirectServlet?community=math&amp;company=educom&amp;url=http://www.edu.com/index.asp?source=ps1rwcs4hh" class="dark" target="_blank"><img src="http://hub-images.webct.com/images/educom.gif" width="88" height="31" border="0"></a></font></p>
-      <p align="center"><font face="Arial, Helvetica, sans-serif" size="-1"> 
-        <a href="http://about.webct.com/media/" class="dark">Advertise with
-us</a> || <a href="/announce/openletter.html">Why we advertise</a></font></p>
-
-<!-- End Footer -->
-
-<font size="-1">© 1994-2000 The Math Forum<br>
-http://mathforum.com/<br></font>
-</center>
-
-<font size="2"><a href="mailto:webmaster@mathforum.com">webmaster@mathforum.com</a><br>
+<font size="-1">© 1994-2002 The Math Forum<br>
+http://mathforum.org/<br></font>
+<a href="/drexel/"><img border="0" src="/gifs/small_dragon.gif"></a>
+</p></center>
+<font size="2"><a href="mailto:webmaster@mathforum.org">webmaster@mathforum.org</a><br>
 </font>
 </center>
 
