--- a/a/am/ame/american.edu.html
+++ b/a/am/ame/american.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the american.edu privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217221934id_/http%3A//www.american.edu/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the american.edu privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603125941id_/http%3A//american.edu/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 
@@ -25,7 +25,8 @@
           <td> 
             <div align="right"><font size="1" face="Arial, Helvetica, sans-serif">Updated: 
               <br>
-              <!-- #BeginDate format:Am1 -->January 25, 2001<!-- #EndDate --></font></div>
+              <!-- #BeginDate format:Am1 -->February 11, 2002<!-- #EndDate -->
+              </font></div>
           </td>
         </tr>
       </tbody></table>
@@ -47,7 +48,7 @@
         prohibited. Users wishing to obtain permission to reprint or reproduce 
         any materials appearing on this site may contact us at <a href="mailto:einfo@american.edu">einfo@american.edu</a>. 
         </font></p>
-      <p><font face="Arial, Helvetica, sans-serif">© 2001 American University 
+      <p><font face="Arial, Helvetica, sans-serif">© 2002 American University 
         All rights reserved. All trademarks mentioned herein belong to their respective 
         owners.</font></p>
       <p>&nbsp; </p>
