--- a/r/ro/roa/roadfly.com.html
+++ b/r/ro/roa/roadfly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the roadfly.com privacy policy that was archived on 2001-06-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010602150119id_/http%3A//www.roadfly.com/info/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the roadfly.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603130750id_/http%3A//www.roadfly.org/info/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
