--- a/r/re/ren/rent.com.au.html
+++ b/r/re/ren/rent.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rent.com.au privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212132633id_/http%3A//www.rent.com.au/about_rent5.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rent.com.au privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603132407id_/http%3A//www.rent.com.au/about_rent5.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>RENT | About</title>
@@ -22,7 +22,7 @@
           <td height="83"> 
 
 <center>
-<script src="http://ad.au.doubleclick.net/adj/rent.com.au/general;sz=468x60;tile=1;ord=12:26:34 AM?" type="text/javascript">
+<script src="http://ad.au.doubleclick.net/adj/rent.com.au/general;sz=468x60;tile=1;ord=11:24:08 PM?" type="text/javascript">
 </script>
 
 <noscript>
