--- a/d/dr/dre/dreamhomesource.com.html
+++ b/d/dr/dre/dreamhomesource.com.html
@@ -1,32 +1,35 @@
-<!--The following is the downloaded HTML source of the dreamhomesource.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204181426id_/http%3A//www.dreamhomesource.com/Security.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the dreamhomesource.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603144653id_/http%3A//www.dreamhomesource.com/Security.asp) for the most accurate reproduction.-->
 
 <html><head>
 
-<meta name="description" content="House plans from Dream Home Source - Over 9,600 home plans and blueprints from 70 professional architects and designers">
+<meta name="description" content="House plans from Dream Home Source - Over 10,250 home plans and blueprints from 73 professional architects and designers">
+
 <meta name="keywords" content="house plans,house plans,home plans,home plans,house plan,home plan,houseplans,homeplans,dream home source,blueprints,blueprints,blue prints,house,home,new homes,floor plans,floorplans,designers,architects,architect plans,architecture,designs,residential plans,real estate,home building,builders,frank betz,mascord,don gardner,design basics,living concepts,ahmann,nelson,affiliate,powered by">
 
 <meta name="robots" content="index,follow">
 
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="P3Pv1" href="http://www.dreamhomesource.com/w3c/p3p.xml">
 <link rel="stylesheet" type="text/css" href="/main.css">
 <script type="text/javascript" language="JavaScript" src="/dhs.js"></script>
-<title>Dream Home Source, Inc. - Over 9,600 house plans - Privacy And Security</title>
+<title>Dream Home Source - Over 10,250 house plans - Privacy And Security</title>
 
 </head>
 <body marginwidth="0" marginheight="0" topmargin="0" leftmargin="0">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
-		<td align="center" valign="middle" width="120" nowrap="" class="topheader"><a href="http://www.dreamhomesource.com/"><img src="/images/DHSLogo.gif" alt="Dream Home Source, Inc. - Over 9,600 house plans" border="0" width="58" height="72"></a></td>
+		<td align="center" valign="middle" width="120" nowrap="" class="topheader"><a href="http://www.dreamhomesource.com/"><img src="/images/DHSLogo.gif" alt="Dream Home Source, Inc. - Over 10,250 house plans" border="0" width="58" height="72"></a></td>
 		<td align="center" valign="middle" width="100%" nowrap="" class="topheader">
 
-<!-- ---------- Advertising.com Banner Code -------------- --> 
-<script language="JavaScript">
-var bnum=new Number(Math.floor(99999999 * Math.random())+1);
-document.write('<SCR'+'IPT LANGUAGE="JavaScript" ');
-document.write('SRC="http://servedby.advertising.com/site=70111/size=468060/bnum='+bnum+'/optn=1"></SCR'+'IPT>');
-</script><script language="JavaScript" src="http://servedby.advertising.com/site=70111/size=468060/bnum=17432330/optn=1"></script>
-<!-- ---------- Copyright 2000, Advertising.com ---------- -->
+<!-- ----------Advertising.com Banner Code---------- -->
+<script language="JavaScript" src="http://servedby.advertising.com/site=70111/size=468060/bnum=27953777/optn=1">
+</script>
+<noscript>
+     <A HREF="http://servedby.advertising.com/click/site=70111/bnum=27953777" TARGET="_blank">
+     <IMG SRC="http://servedby.advertising.com/site=70111/size=468060/bnum=27953777/bins=1/rich=0" WIDTH="468" HEIGHT="60" BORDER="0" ALT="Click to learn more...">
+     </A>
+</noscript>
+<!-- ----------Copyright 2000, Advertising.com---------- -->
 
 		</td>
 	</tr>
@@ -38,10 +41,13 @@ document.write('SRC="http://servedby.advertising.com/site=70111/size=468060/bnum
 			<table border="0" class="topnav">
 				<tbody><tr>
 					<td class="topnav" height="20" valign="MIDDLE" nowrap="">
-						&nbsp;&nbsp;<a class="topnavtext" href="http://www.dreamhomesource.com/">Home Plans</a>&nbsp;&nbsp;
+						&nbsp;&nbsp;<a class="topnavtext" href="http://www.dreamhomesource.com/Search.asp">Home Plans</a>&nbsp;&nbsp;
 					</td>
 					<td class="topnav" height="20" valign="MIDDLE" nowrap="">
 						&nbsp;&nbsp;<a class="topnavtext" href="http://www.dreamhomesource.com/Store.asp">Store</a>&nbsp;&nbsp;
+					</td>
+					<td class="topnav" height="20" valign="MIDDLE" nowrap="">
+						&nbsp;&nbsp;<a class="topnavtextspotlight" href="http://www.dreamhomesource.com/PGHome.asp">Product Guide</a>&nbsp;&nbsp;
 					</td>
 					<td class="topnav" height="20" valign="MIDDLE" nowrap="">
 						&nbsp;&nbsp;<a class="topnavtext" href="http://www.dreamhomesource.com/Services.asp">Services</a>&nbsp;&nbsp;
@@ -49,7 +55,6 @@ document.write('SRC="http://servedby.advertising.com/site=70111/size=468060/bnum
 					<td class="topnav" height="20" valign="MIDDLE" nowrap="">
 						&nbsp;&nbsp;<a class="topnavtext" href="http://www.dreamhomesource.com/Library.asp">Library</a>&nbsp;&nbsp;
 					</td>
-
 					<td class="topnav" height="20" valign="MIDDLE" nowrap="">
 						&nbsp;&nbsp;<a class="topnavtextactive" href="http://www.dreamhomesource.com/Company.asp">Company Info</a>&nbsp;&nbsp;
 					</td>
@@ -76,12 +81,11 @@ document.write('SRC="http://servedby.advertising.com/site=70111/size=468060/bnum
 
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tbody><tr>
-    <td nowrap="" class="PageTitle"><img src="/images/cgrade.gif"></td>
+    <td width="72" height="33" nowrap="" class="PageTitle"><img src="/images/cgrade.gif" border="0"></td>
     <td nowrap="" class="PageTitle">Privacy And Security</td>
-    <td width="100%" align="right" class="PageTitle"><img src="/images/blspc5x1.gif"></td>
+    <td width="100%" align="right" class="PageTitle"><a href="javascript:alert('To bookmark this page, please close this dialog and press CTRL-D. This page will be listed in your Bookmarks.');" class="Bookmark">Bookmark This Page</a>&nbsp;&nbsp;&nbsp;&nbsp;</td>
   </tr>
 </tbody></table>
-
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<td width="160" align="left" valign="top">
@@ -98,7 +102,34 @@ document.write('SRC="http://servedby.advertising.com/site=70111/size=468060/bnum
         <table width="120" cellspacing="0" cellpadding="0"><tbody><tr><td height="2" width="120" class="topnav"></td><td></td></tr></tbody></table>
 <table width="120" cellpadding="0" cellspacing="0">
 	<tbody><tr>
-		<td height="80" valign="middle">&nbsp;</td>
+		<td height="80" valign="middle">
+
+<!-- ----------Advertising.com Banner Code---------- -->
+<script language="JavaScript" src="http://servedby.advertising.com/site=72140/size=120060/bnum=20588482/optn=1">
+</script>
+<noscript>
+     <A HREF="http://servedby.advertising.com/click/site=72140/bnum=20588482" TARGET="_blank">
+     <IMG SRC="http://servedby.advertising.com/site=72140/size=120060/bnum=20588482/bins=1/rich=0" WIDTH="120" HEIGHT="60" BORDER="0" ALT="Click to learn more...">
+     </A>
+</noscript>
+<!-- ----------Copyright 2000, Advertising.com---------- -->
+
+		</td>
+	</tr>
+	<tr>
+		<td height="80" valign="middle">
+			<a href="http://servedby.advertising.com/click/site=80774/mnum=50676"><img src="/images/Sponsors/GEAppliances/advantiumbutton.gif" border="0"></a>
+		</td>
+	</tr>
+	<tr>
+		<td height="80" valign="middle">
+			<a href="http://servedby.advertising.com/click/site=80774/mnum=53422"><img src="/images/Sponsors/TooHome/button1.gif" border="0"></a>
+		</td>
+	</tr>
+	<tr>
+		<td height="100" valign="middle">
+			<a href="IndyMac.asp"><img src="/images/Sponsors/IndyMac/1A_120x80_an.gif" border="0"></a>
+		</td>
 	</tr>
 </tbody></table>
 
@@ -123,7 +154,7 @@ document.write('SRC="http://servedby.advertising.com/site=70111/size=468060/bnum
 	<tr>
 		<td width="125" align="center" valign="middle"><a href="http://www.bbbonline.org/r.cfm?ID=1136000356" target="_Blank"><img border="0" src="/images/reli2.gif" width="125" height="89"></a></td>
 		<td width="*" align="center"><a href="http://www.dreamhomesource.com/Advertising.asp">Affiliates/Partners/Advertisers</a>&nbsp; <a href="http://www.dreamhomesource.com/Contact.asp">Contact Us</a>&nbsp;&nbsp; <a href="http://www.dreamhomesource.com/Security.asp">Privacy and Security</a><br><br>
-			Copyright 1995-2001 Dream Home Source, Inc. All Rights Reserved.<br><br>
+			Copyright 1995-2002 Dream Home Source, Inc. All Rights Reserved.<br><br>
 			Republication or redissemination of this site's content is expressly prohibited without the written permission of Dream Home Source, Inc.
 		</td>
 		<td width="125" align="center" valign="middle"><!-- BEGIN: BizRate.com Medal (124x55 pixels) --><a href="http://www.bizrate.com/merchant/reports/index.xpml?mid=24999" target="bizrate.com"><img src="/images/medal_litebg_124x55.gif" alt="BizRate Customer Certified (GOLD) Site" width="124" height="55" align="middle" border="0" target="_blank"></a><!-- END: BizRate.com Medal (124x55 pixels) --></td>
