--- a/c/ch/che/chesterfield.gov.html
+++ b/c/ch/che/chesterfield.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the chesterfield.gov privacy policy that was archived on 2001-10-15.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011015095437id_/http%3A//chesterfield.gov/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chesterfield.gov privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603145304id_/http%3A//www.chesterfield.gov/privacy.asp) for the most accurate reproduction.-->
 
 <html lang="en"><!-- #BeginTemplate "/Templates/DepartmentTemplate.dwt" --><head>
 <!-- #BeginEditable "doctitle" --> 
@@ -7,7 +7,7 @@
 <!-- #EndEditable -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" href="/includes/cc.css">
-
+ 
 
 <script language="javascript" type="text/javascript">
 <!--
@@ -65,7 +65,7 @@ function setResize(){setTimeout("window.onresize=reDo",500);}
     <td height="54" valign="top" width="101"><a href="/offsdept.asp" onmouseover="showMenu('document.all[\'officials\']','document.layers[\'officials\']')" onmouseout="hideMenu('document.all[\'officials\']','document.layers[\'officials\']')" onfocus="if(this.blur)this.blur()"><img src="/images/mm_offdepts.gif" width="82" height="40" alt="Click Here to Enter the Departments Page" border="0"></a></td>
     <td height="54" valign="top" width="98"><a href="/events.asp" onmouseover="showMenu('document.all[\'news\']','document.layers[\'news\']')" onmouseout="hideMenu('document.all[\'news\']','document.layers[\'news\']')" onfocus="if(this.blur)this.blur()"><img src="/images/mm_news.gif" width="82" height="40" alt="Click Here to Enter the News &amp; Events Page" border="0"></a></td>
     <td height="54" valign="top" width="101"><a href="/allabout.asp" onmouseover="showMenu('document.all[\'facts\']','document.layers[\'facts\']')" onmouseout="hideMenu('document.all[\'facts\']','document.layers[\'facts\']')" onfocus="if(this.blur)this.blur()"><img src="/images/mm_countyfacts.gif" width="83" height="40" alt="Click Here to Enter the Facts &amp; Information Page" border="0"></a></td>
-    <td height="54" valign="top" width="101"><a href="/publicsafety.asp" onmouseover="showMenu('document.all[\'safety\']','document.layers[\'safety\']')" onmouseout="hideMenu('document.all[\'safety\']','document.layers[\'safety\']')" onfocus="if(this.blur)this.blur()"><img src="/images/mm_pubsafety.gif" width="82" height="40" alt="Click Here for the Public Safety Page" border="0"></a></td>
+    <td height="54" valign="top" width="101"><a href="/publicsafety.asp" onmouseover="showMenu('document.all[\'safety\']','document.layers[\'safety\']')" onmouseout="hideMenu('document.all[\'safety\']','document.layers[\'safety\']')" onfocus="if(this.blur)this.blur()"><img src="/images/mm_pubsafety.gif" width="82" height="40" alt="Click Here to Enter the Public Safety Page" border="0"></a></td>
     <td height="54" width="72" valign="top"><a href="/Services/serguide.asp" onmouseover="showMenu('document.all[\'services\']','document.layers[\'services\']')" onmouseout="hideMenu('document.all[\'services\']','document.layers[\'services\']')" onfocus="if(this.blur)this.blur()"><img src="/images/mm_services.gif" width="72" height="40" alt="Click Here to Enter the Services Index Page" border="0"></a></td>
     <td height="54" width="18"><img src="/images/mm_rightcorner.gif" width="18" height="54" alt="right corner"></td>
   </tr>
@@ -128,7 +128,8 @@ function setResize(){setTimeout("window.onresize=reDo",500);}
   </tr>
 </tbody></table>
 <!-- #EndLibraryItem --><!-- #EndEditable --><br>
-            <span class="inc_menu">©2001 Chesterfield County, Virginia - <a class="inc_menu" href="/privacy.asp">Privacy Policy</a></span> 
+            <span class="incMenu">© 2002 Chesterfield County, Virginia - 
+<a class="incMenu" href="/privacy.asp">Privacy Policy</a></span> 
           </td>
         </tr>
       </tbody></table>
@@ -137,7 +138,7 @@ function setResize(){setTimeout("window.onresize=reDo",500);}
     <td rowspan="2" width="592" align="left" valign="top"><!-- #BeginEditable "Content" --> 
       <h1>Chesterfield County, Virginia<br>
         Internet Privacy Policy Statement </h1>
-      <h3>Last Updated on February 12, 2001</h3>
+      <h3>Last Updated on May 1, 2002</h3>
       <p> The following information explains the Internet Privacy Policy which 
         Chesterfield County has adopted for its website. The following is intended 
         to explain our current Internet privacy practices but shall not be construed 
@@ -149,9 +150,19 @@ function setResize(){setTimeout("window.onresize=reDo",500);}
         Privacy Protection Act of 1976, the Virginia Freedom of Information Act, 
         and by any applicable U.S. Federal laws.</p>
       <h3>Links to other websites</h3>
-      <p>This site contains links that lead to resources outside the county's 
-        website. Chesterfield County is not responsible for the privacy practices 
-        or the content of such websites.</p>
+      <p>Because the county cannot control the sites to which we link, it cannot 
+        be held responsible for content included in them. Moreover, in no way 
+        should an external link be considered any form of endorsement by the County 
+        of Chesterfield.</p>
+      <p>Information contained on websites that the County of Chesterfield website 
+        provides links to are maintained by other public and private organizations. 
+        Because the county cannot control or guarantee the accuracy, relevance, 
+        timeliness, or completeness of sites to which it links, the county cannot 
+        be responsible for their content. Further, the inclusion of pointers to 
+        particular items in hypertext is not intended to reflect their importance, 
+        nor is it intended to endorse any views expressed or products or services 
+        offered by the author of the reference or the organization operating the 
+        server on which the reference is maintained.</p>
       <h3>Information we collect </h3>
       <p>When you access our website, the routing information and the essential 
         and nonessential technical information listed below is automatically collected. 
