--- a/h/ho/hom/homewithgod.com.html
+++ b/h/ho/hom/homewithgod.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homewithgod.com privacy policy that was archived on 2001-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010603091348id_/http%3A//www.homewithgod.com/links/pages/privacystmt) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homewithgod.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603145948id_/http%3A//www.homewithgod.com/links/pages/privacystmt) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN" "http://www.w3.org/TR/REC-html40/strict.dtd"><html><head>
 <meta http-equiv="PICS-Label" content="(PICS-1.1 &quot;http://www.classify.org/safesurf/&quot; l gen true for &quot;http://www.homewithgod.com/&quot; r (SS~~000 1))">
@@ -34,13 +34,13 @@ var imageurl='<img src="'+cgi+'/adcycle.cgi?group=1&media=1&id='+flash+'"';
 var clickurl='<a href="'+cgi+'/adclick.cgi?manager=adcycle.com&id='+flash+'" target="_top">';
 document.write(clickurl+imageurl+' width=468 height=60 border=1 ALT="Click to Visit"></a>');
 // -->
-</script><a href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&amp;id=115" target="_top"><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?group=1&amp;media=1&amp;id=115" width="468" height="60" border="1" alt="Click to Visit"></a>
+</script><a href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&amp;id=120" target="_top"><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?group=1&amp;media=1&amp;id=120" width="468" height="60" border="1" alt="Click to Visit"></a>
 <noscript>
 <a href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&id=1" target="_top"><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?group=1&media=1&id=1" width=468 height=60 border=1 ALT="Click to Visit"></a>
 </noscript>
 <!-- END HOMEWITHGOD.COM MEDIA CODE WITH CACHE-BUSTER -->
 
-<br><a class="banner" href="http://www.homewithgod.com/mansions/"><font face="ms sans serif, arial, helvetica" size="2" color="#E0EBF5">Build your HomewithGod with 50 megs of FREE web space!</font></a>
+<br><a class="banner" href="http://www.homewithgod.com/adv/advertise.shtml"><font face="ms sans serif, arial, helvetica" size="2" color="#E0EBF5">Advertise Your Business or Web Site at Homewithgod.com</font></a>
 
 </td></tr></tbody></table>
 
@@ -80,7 +80,7 @@ document.write(clickurl+imageurl+' width=468 height=60 border=1 ALT="Click to Vi
 
 <center>
 <table border="0" cellpadding="2" cellspacing="0" width="460">
-<tbody><tr><td>
+<tbody><tr><td align="left">
 <h3>Privacy Statement</h3>
 <font size="2">HomewithGod.com has created this privacy statement in order to demonstrate our firm commitment to privacy. The following discloses our information gathering and dissemination practices for this website: HomewithGod.com.</font>
 
@@ -150,12 +150,32 @@ Lone Oak TX 75453<br>
 
 		<!-- INSERT FEATURED SPONSOR HERE -->
 
+<!-- START HOMEWITHGOD.COM MEDIA CODE WITH CACHE-BUSTER -->
+<center>
+<script language="javascript">
+<!-- /* © 2000 AdCycle.com All Rights Reserved.*/ 
+var ad="";var jar=new Date();var seconds=jar.getSeconds();
+var minutes=jar.getMinutes();var flash=seconds*minutes;
+var cgi='http://www.homewithgod.com/cgi-bin/ads';
+var imageurl='<img src="'+cgi+'/adcycle.cgi?group=1&media=4&id='+flash+'"';
+var clickurl='<a href="'+cgi+'/adclick.cgi?manager=adcycle.com&id='+flash+'" target="_top">';
+document.write(clickurl+imageurl+' width=120 height=90 border=0 ALT="Click to Visit"></a>');
+// -->
+</script><a href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&amp;id=120" target="_top"><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?group=1&amp;media=4&amp;id=120" width="120" height="90" border="0" alt="Click to Visit"></a>
+<noscript>
+<a href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&id=1" target="_top"><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?group=1&media=4&id=1" width=120 height=90 border=0 ALT="Click to Visit"></a>
+</noscript>
+</center>
+<!-- END HOMEWITHGOD.COM MEDIA CODE WITH CACHE-BUSTER -->
+
+<br>
+
 		<!-- BEGIN COMMUNITIES -->
 
 <table border="0" cellpadding="0" cellspacing="0" bgcolor="#97C4FF" width="145">
 <tbody><tr><td width="145" colspan="2">
 <img src="http://www.homewithgod.com/Images/top_menu145x15.gif" width="145" height="15" alt=""></td></tr>
-<tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP">
+<tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP" align="left">
 <font face="Arial, Helvetica" size="2" color="#FF0066"><b>Communities</b></font><br>
 <img src="http://www.homewithgod.com/Images/spacer.gif" width="1" height="3" alt="HomewithGod Communities"><br>
 <font face="ms sans serif, arial, helvetica" size="1">
@@ -190,7 +210,7 @@ Lone Oak TX 75453<br>
 <a class="menu" href="http://www.homewithgod.com/utilities/MyRemindMe.shtml">My Remind Me</a><br>
 <a class="menu" href="http://www.homewithgod.com/cgi-homewithgod/links/mylinks.cgi?detailed=1">My Links</a><br>
 <a class="menu" href="http://www.mychristianweather.com/" target="_newwin">Local Weather</a><br>
-<a class="menu" href="http://www.tvgrid.com/grid/index.html" target="_newwin">Local TV Listings</a><br>
+<a class="menu" href="http://www.tvguide.com/" target="_newwin">Local TV Listings</a><br>
 </font>
 
 </td></tr>
@@ -204,12 +224,12 @@ Lone Oak TX 75453<br>
 <table border="0" cellpadding="0" cellspacing="0" bgcolor="#97C4FF" width="145">
 <tbody><tr><td width="145" colspan="2">
 <img src="http://www.homewithgod.com/Images/top_menu145x15.gif" width="145" height="15" alt=""></td></tr>
-<tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP">
+<tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP" align="left">
 <font face="Arial, Helvetica" size="2" color="#FF0066"><b>Featured Links</b></font><br>
 <img src="http://www.homewithgod.com/Images/spacer.gif" width="1" height="3" alt="Featured Links"><br>
 <font face="ms sans serif, arial, helvetica" size="1">
 <!-- START HOMEWITHGOD.COM MEDIA CODE -->
-<a class="menu" href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&amp;id=1" target="_top">Pearl of Wisdom - Gifts</a><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?campaign=PRL3&amp;media=7&amp;id=1" width="1" height="1" border="0"> 
+<a class="menu" href="http://www.homewithgod.com/cgi-bin/ads/adclick.cgi?manager=adcycle.com&amp;id=1" target="_top"><font face="ms sans serif, arial, helvetica" size="1">Pearl of Wisdom - Gifts</font></a><img src="http://www.homewithgod.com/cgi-bin/ads/adcycle.cgi?campaign=PRL3&amp;media=7&amp;id=1" width="1" height="1" border="0"> 
 <!-- END HOMEWITHGOD.COM MEDIA CODE -->
 <br><br>
 <a class="menu" href="http://www.homewithgod.com/adv/advertise.shtml">Advertise your site here</a><br>
@@ -225,7 +245,7 @@ Lone Oak TX 75453<br>
 <table border="0" cellpadding="0" cellspacing="0" bgcolor="#97C4FF" width="145">
 <tbody><tr><td width="145" colspan="2">
 <img src="http://www.homewithgod.com/Images/top_menu145x15.gif" width="145" height="15" alt=""></td></tr>
-<tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP">
+<tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP" align="left">
 <font face="Arial, Helvetica" size="2" color="#FF0066"><b>Mailing Lists</b></font><br>
 <img src="http://www.homewithgod.com/Images/spacer.gif" width="1" height="3" alt="Free Stuff"><br>
 <font face="ms sans serif, arial, helvetica" size="1">
@@ -259,7 +279,7 @@ Lone Oak TX 75453<br>
 		<!-- BEGIN MAILING LISTS & ADVERTISING INFO -->
 
 <table border="0" cellpadding="0" cellspacing="0" width="145">
-<tbody><tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP">
+<tbody><tr><td width="8"><img src="http://www.homewithgod.com/Images/spacer.gif" width="8" height="1" alt="spacer"></td><td width="137" valign="TOP" align="left">
 <font face="ms sans serif, arial, helvetica" size="1">
 <a class="banner" href="http://www.homewithgod.com/adv/advertise.shtml"><font face="ms sans serif,arial,helvetica" size="1" color="#E0EBF5"><b>Advertising Info</b></font></a><br>
 <br>
@@ -312,13 +332,13 @@ document.write(msg);
 <font face="ms sans serif, arial, helvetica" size="1">
 <a class="homecategory" href="http://www.homewithgod.com/">Home</a> | <a class="homecategory" href="http://cards.123greetings.com/cgi-bin/cards/sendcard.pl?log=homewithgod">Cards</a> | <a class="homecategory" href="http://www.homewithgod.com/Cards/ecards.shtml">Poems</a> | <a class="homecategory" href="http://www.homewithgod.com/links/pages/chat/">Chat</a> | <a class="homecategory" href="http://prayerbook.homewithgod.com/cgi-bin/prayerbook/multi.pl?31935968703311:16:0">Prayer Partners</a> | <a class="homecategory" href="http://guestbook.homewithgod.com/cgi-bin/guestbook/multi.pl?6835971315981:16:0">Memorials</a> | <a class="homecategory" href="http://www.homewithgod.com/links/pages/link2us/">Link To Us</a> | <a class="homecategory" href="http://www.homewithgod.com/utilities/MyRemindMe.shtml">My RemindMe</a> | <a class="homecategory" href="http://www.homewithgod.com/cgi-homewithgod/links/mylinks.cgi?detailed=1">MyLinks</a> | <a class="homecategory" href="http://www.homewithgod.com/cgi-homewithgod/links/add.cgi">Add a Site</a> | <a class="homecategory" href="http://www.homewithgod.com/cgi-homewithgod/links/modify.cgi">Modify a Site</a> | <a class="homecategory" href="http://www.homewithgod.com/New/">New Web Sites</a> | <a class="homecategory" href="http://www.homewithgod.com/Cool/">Cool Web Sites</a> | <a class="homecategory" href="http://www.homewithgod.com/Ratings/">Top Rated Sites</a> | <a class="homecategory" href="http://www.homewithgod.com/cgi-homewithgod/links/search.cgi">Advanced Search</a> | <a class="homecategory" href="http://www.homewithgod.com/cgi-bin/morn_eve/devotional.pl">Daily Devotional</a> | <a class="homecategory" href="http://www.homewithgod.com/cgi-homewithgod/links/subscribe.cgi">Email Updates</a> | <a class="homecategory" href="http://www.homewithgod.com/utilities/">Webmaster Tools</a> | <a class="homecategory" href="http://www.homewithgod.com/links/pages/statementfaith/">Statement of Faith</a> | <a class="homecategory" href="http://www.HomewithGod.com/links/pages/privacystmt/">Privacy Statement</a></font></td></tr>
 <tr><td width="160">&nbsp;</td><td width="470" align="center">
-<font face="ms sans serif, arial, helvetica" size="1"><a class="homecategory" href="http://www.homewithgod.com/links/pages/copyright/">Copyright</a> <sup>©</sup> 1999, 2000-01  HomewithGod.com All rights reserved.<br>Our Logo provided by <a class="homecategory" href="http://www.inspired-art.com/">Danny Hahlbohm</a> Copyright<sup>©</sup>All rights reserved by the artist.</font></td></tr>
+<font face="ms sans serif, arial, helvetica" size="1"><a class="homecategory" href="http://www.homewithgod.com/links/pages/copyright/">Copyright</a> <sup>©</sup> 1999-2002  HomewithGod.com All rights reserved.<br>Our Logo provided by <a class="homecategory" href="http://www.inspired-art.com/">Danny Hahlbohm</a> Copyright<sup>©</sup>All rights reserved by the artist.</font></td></tr>
 </tbody></table>
 </center>
 
 <br>
 
-<center><font color="#04649C" size="1">Pages Updated On: 3-Jun-2001 - 00:10:01</font></center>
+<center><font color="#04649C" size="1">Pages Updated On: 3-Jun-2002 - 09:01:00</font></center>
 
 </center>
 
