--- a/c/cc/ccc/cccapply.org.html
+++ b/c/cc/ccc/cccapply.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the cccapply.org privacy policy that was archived on 2001-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011226235931id_/http%3A//www.cccapply.org/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the cccapply.org privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603150406id_/http%3A//www.cccapply.org/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 	<title>CCCApply - Privacy Policy Statement</title>
@@ -233,7 +233,17 @@ Xap Corporation<br>
 </div>
 <!--end contents of main table-->
 
-		<br><br>
+		<br>
+		
+<style>
+.body3 {
+	font-family : "Verdana", "Arial", "Helvetica";
+	font-size : 8pt;
+	valign : top	
+}
+</style>
+
+		<br>
 		</td></tr></tbody></table>
 		</td>
 		</tr>
