--- a/s/sp/spl/splendidtable.org.html
+++ b/s/sp/spl/splendidtable.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the splendidtable.org privacy policy that was archived on 2001-04-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010408040502id_/http%3A//splendidtable.org/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the splendidtable.org privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603150605id_/http%3A//splendidtable.org/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2 Final//EN"><html><head>
 <title>The Splendid Table: User Privacy</title>
@@ -55,7 +55,7 @@ function MM_swapImage() { //v2.0
 </table><table border="0" cellspacing="0" cellpadding="0">
   <tbody><tr> 
     
-<td><a href="http://table.mpr.org"><img src="http://table.mpr.org/images/stlogo_sm.gif" width="126" height="49" border="0" alt="Splendid Table Home" vspace="5"></a><img src="http://table.mpr.org/images/stinfo_h.jpg" width="474" height="49" alt="Splendid Table Information" vspace="5"></td>
+<td><a href="http://table.mpr.org"><img src="/images/stlogo_sm.gif" width="126" height="49" border="0" alt="Splendid Table Home" vspace="5"></a><img src="/images/stinfo_h.jpg" width="474" height="49" alt="Splendid Table Information" vspace="5"></td>
   </tr>
   <tr> 
     
@@ -63,14 +63,15 @@ function MM_swapImage() { //v2.0
 <table border="0" cellspacing="0" cellpadding="0" height="20" align="center">
 <tbody><tr> 
 <td valign="top"><a href="http://table.mpr.org/recipes/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav1','document.nav1','http://table.mpr.org/images/nav1over.gif','#944777391440')"><img name="nav1" border="0" src="http://table.mpr.org/images/nav1.gif" width="48" height="12" alt="Recipe Box"></a></td>
-<td valign="top"><a href="http://forum.mpr.org/?14@@.ee6b657" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav3','document.nav3','http://table.mpr.org/images/nav3over.gif','#944777457204')"><img name="nav3" border="0" src="http://table.mpr.org/images/nav3.gif" width="31" height="12" alt="Food Talk"></a></td>
+<td valign="top"><a href="http://table.mpr.org/store/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav2','document.nav2','http://table.mpr.org/images/nav2over.gif','#944777423306')"><img name="nav2" border="0" src="http://table.mpr.org/images/nav2.gif" width="39" height="12" alt="Splendid Table Store"></a></td>
+<td valign="top"><a href="http://forum.mpr.org/WebX?14@@.ee6b657" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav3','document.nav3','http://table.mpr.org/images/nav3over.gif','#944777457204')"><img name="nav3" border="0" src="http://table.mpr.org/images/nav3.gif" width="31" height="12" alt="Food Talk"></a></td>
 <td valign="top"><a href="http://table.mpr.org/souptonuts/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav4','document.nav4','http://table.mpr.org/images/nav4over.gif','#944777492165')"><img name="nav4" border="0" src="http://table.mpr.org/images/nav4.gif" width="78" height="12" alt="From Soup to Nuts"></a></td>
 <td valign="top"><a href="http://table.mpr.org/whereweeat/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav5','document.nav5','http://table.mpr.org/images/nav5over.gif','#944777537810')"><img name="nav5" border="0" src="http://table.mpr.org/images/nav5.gif" width="84" height="12" alt="Where We Eat"></a></td>
 <td valign="top"><a href="http://table.mpr.org/books/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav6','document.nav6','http://table.mpr.org/images/nav6over.gif','#944777564178')"><img name="nav6" border="0" src="http://table.mpr.org/images/nav6.gif" width="43" height="12" alt="Bookshelf"></a></td>
 <td valign="top"><a href="http://table.mpr.org/boilingwater/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav7','document.nav7','http://table.mpr.org/images/nav7over.gif','#944777610335')"><img name="nav7" border="0" src="http://table.mpr.org/images/nav7.gif" width="79" height="12" alt="Boiling Water 101"></a></td>
 <td valign="top"><a href="http://table.mpr.org/chronicles/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav8','document.nav8','http://table.mpr.org/images/nav8over.gif','#944777637434')"><img name="nav8" border="0" src="http://table.mpr.org/images/nav8.gif" width="66" height="12" alt="Kitchen Chronicles"></a></td>
 <td valign="top"><a href="http://table.mpr.org/gourmetguide/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav9','document.nav9','http://table.mpr.org/images/nav9over.gif','#944777667347')"><img name="nav9" border="0" src="http://table.mpr.org/images/nav9.gif" width="97" height="12" alt="Gourmet's Guide"></a></td>
-<td valign="top"><a href="http://table.mpr.org/rafiles/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav10','document.nav10','http://table.mpr.org/images/nav10over.gif','#944777697981')"><img name="nav10" border="0" src="http://table.mpr.org/images/nav10.gif" width="35" height="12" alt="Listen In"></a></td>
+<td valign="top"><a href="http://table.mpr.org/listings/index.html" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('document.nav10','document.nav10','http://table.mpr.org/images/nav10over.gif','#944777697981')"><img name="nav10" border="0" src="http://table.mpr.org/images/nav10.gif" width="35" height="12" alt="Listen In"></a></td>
 </tr>
 </tbody></table>
 </td>
@@ -260,16 +261,16 @@ Public Radio Home</font></a>&nbsp;&nbsp;</td>
 </tr>
 </tbody></table>
 </td>
-<td height="27" valign="BOTTOM" align="RIGHT"> 
-<table cellpadding="2" cellspacing="0" border="0">
-<tbody><tr> 
-<td align="left"> <font size="1" color="#FFFFFF" face="Arial, Helvetica, sans-serif">© 
-Copyright &amp;</font> <a href="http://www.mpr.org/www/basic/terms.htm"><font size="1" face="Helvetica, Arial, sans-serif" color="#FFFFCC">Terms 
-of Use</font></a>&nbsp; <font size="1" face="Helvetica, Arial, sans-serif" color="#FFFFFF">|</font> 
-&nbsp;<a href="http://table.mpr.org/about/privacy.html"><font size="1" face="Helvetica, Arial, sans-serif" color="#FFFFCC">Privacy</font></a></td>
-</tr>
-</tbody></table>
-</td>
+        <td height="27" valign="BOTTOM" align="RIGHT"> 
+            <table cellpadding="2" cellspacing="0" border="0">
+                <tbody><tr> 
+                    <td align="left"> <font size="1" color="#FFFFFF" face="Arial, Helvetica, sans-serif">© 
+                        <a href="http://www.mpr.org/www/basic/terms.htm"><font face="Helvetica, Arial, sans-serif" color="#FFFFCC">Copyright</font></a> 
+                        2002&nbsp;|</font> &nbsp;<a href="about/privacy.html"><font face="Helvetica, Arial, sans-serif" size="1" color="#FFFFCC">Terms 
+                        of Use</font></a> </td>
+                </tr>
+            </tbody></table>
+        </td>
 </tr>
 <tr> 
 <td height="1" bgcolor="#FFFFFF" valign="top" align="left" colspan="2"><img src="http://table.mpr.org/images/pixel.gif" width="1" height="1" border="0"></td>
