playersonly.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "sports",
  "char_count": 6109,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.56,
  "homepage_snapshot_redirected_domain": "playersonly.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330165850id_/http://playersonly.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330165850id_/http%3A//playersonly.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "playersonly.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603162525id_/http%3A//playersonly.com/misc/privacy.html",
  "policy_title": "Playersonly.com Privacy Statement",
  "policy_url": "playersonly.com/misc/privacy.html",
  "sha1": "298db6673d844cbb5dd68e1254242409696e8dcc",
  "simhash": 12095944230566718854,
  "simhash_updated": false,
  "site_hostname": "playersonly.com",
  "site_url": "http://playersonly.com",
  "smog": 12.63,
  "strict_updated": false,
  "timestamp": "20020603162525",
  "word_count": 958,
  "year": 2002
}

--- a/p/pl/pla/playersonly.com.html
+++ b/p/pl/pla/playersonly.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the playersonly.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218132504id_/http%3A//playersonly.com/misc/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the playersonly.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603162525id_/http%3A//playersonly.com/misc/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Playersonly.com Privacy Statement</title>
@@ -104,7 +104,7 @@ document.write (sa[rand(G_total_sa)]);
 <area shape="rect" coords="0,141,130,160" href="/misc/refer.html">
 <area shape="rect" coords="0,124,131,141" href="/misc/help.html">
 <area shape="rect" coords="0,106,131,124" href="/women/index.html">
-<area shape="rect" coords="0,89,131,106" href="http://www.playersonly.com/cgi-bin/lines/players/lines.cgi?sport=100">
+<area shape="rect" coords="0,89,131,106" href="http://205.134.167.60/lines/lines.cgi?device=browser&amp;site=players&amp;sport=other">
 <area shape="rect" coords="0,71,130,89" href="/contest/index.html">
 <area shape="rect" coords="0,53,130,71" href="http://208.31.25.3/default.asp?c=playersonly&amp;page=nfl/index.htm">
 <area shape="rect" coords="0,36,130,53" href="/misc/howtostart.html">
