where2getit.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9719,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.82,
  "homepage_snapshot_redirected_domain": "where2getit.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331030907id_/http://where2getit.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331030907id_/http%3A//where2getit.com",
  "interval": "2002_A",
  "link_text": "Privacy Statement.",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "where2getit.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603173635id_/http%3A//where2getit.com/whoweare/privacy.php",
  "policy_title": "where2getit: Who We Are",
  "policy_url": "where2getit.com/whoweare/privacy.php",
  "sha1": "dac423310d21879f561f87d0efbf43625b21b225",
  "simhash": 12453717628466334074,
  "simhash_updated": false,
  "site_hostname": "where2getit.com",
  "site_url": "http://where2getit.com",
  "smog": 16.11,
  "strict_updated": false,
  "timestamp": "20020603173635",
  "word_count": 1555,
  "year": 2002
}

--- a/w/wh/whe/where2getit.com.html
+++ b/w/wh/whe/where2getit.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the where2getit.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204173554id_/http%3A//where2getit.com/whoweare/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the where2getit.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603173635id_/http%3A//where2getit.com/whoweare/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>where2getit: Who We Are</title>
@@ -73,7 +73,7 @@ if (document.images)
       <a href="/contactus/" onmouseover="document.contactus.src=contactusON.src" onmouseout="document.contactus.src=contactusOFF.src">
         <img src="/_siteres/_images/nav/contactus_0.gif" width="90" height="21" border="0" alt="Contact Us." name="contactus"></a></td>
     <td width="104" height="21" bgcolor="#000033">
-      <a href="/members/index.html" onmouseover="document.members.src=membersON.src" onmouseout="document.members.src=membersOFF.src">
+      <a href="https://admin.where2getit.com/" onmouseover="document.members.src=membersON.src" onmouseout="document.members.src=membersOFF.src">
         <img src="/_siteres/_images/nav/members_0.gif" width="104" height="21" border="0" alt="Member Login." name="members"></a></td>
     <td bgcolor="#FFFFFF" width="1" height="21"><img src="/_siteres/_images/nav/whitepixel.gif" width="1" height="21" alt=" "></td>
     <td bgcolor="#000033" width="100%" height="21"><img src="/_siteres/_images/nav/bblank_0.gif" width="18" height="1" alt=" "></td>
@@ -299,8 +299,14 @@ if (document.images)
 	<td width="777" valign="TOP"> 
 	  <center>
 		<p>&nbsp;</p>
-		<p class="navBottom"><a href="/." class="textNav">Home</a> | <a href="/whoweare/index.php" class="textNav">Who We Are</a> | <a href="/whatwedo/index.php" class="textNav">What We Do</a> | <a href="/clients/index.php" class="textNav">Clients &amp; Partners</a> | <a href="/news/index.php" class="textNav">News</a> | <a href="/contactus/index.php" class="textNav">Contact Us</a> | <a href="/members/index.html" class="textNav">Member Login</a> <br>
-		  Copyright 2001 where2getit. All rights reserved. <a href="/whoweare/privacy.php" class="textNav">Privacy Statement.</a></p>
+		<p class="navBottom"><a href="/." class="textNav">Home</a> | 
+		  <a href="/whoweare/index.php" class="textNav">Who We Are</a> | 
+		  <a href="/whatwedo/index.php" class="textNav">What We Do</a> | 
+		  <a href="/clients/index.php" class="textNav">Clients &amp; Partners</a> | 
+		  <a href="/news/index.php" class="textNav">News</a> | 
+		  <a href="/contactus/index.php" class="textNav">Contact Us</a> | 
+		  <a href="https://admin.where2getit.com/" class="textNav">Member Login</a> <br>
+		  Copyright 2002 where2getit. All rights reserved. <a href="/whoweare/privacy.php" class="textNav">Privacy Statement.</a></p>
 		<p>&nbsp;</p>
 	  </center></td>
 	<td width="100%"><img src="/_siteres/_images/nav/clearpixel.gif" width="1" height="1" alt=" "></td>
