mediapost.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4632,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.52,
  "homepage_snapshot_redirected_domain": "mediapost.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020401065121id_/http://www.mediapost.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020401065121id_/http%3A//mediapost.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "mediapost.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603233626id_/http%3A//www.mediapost.com/privacy.htm",
  "policy_title": "MediaPost Help",
  "policy_url": "mediapost.com/privacy.htm",
  "sha1": "b52e19549e009ae6569543c5c0f5cb11336b772f",
  "simhash": 6854338448108812815,
  "simhash_updated": false,
  "site_hostname": "mediapost.com",
  "site_url": "http://mediapost.com",
  "smog": 14.65,
  "strict_updated": false,
  "timestamp": "20020603233626",
  "word_count": 722,
  "year": 2002
}

--- a/m/me/med/mediapost.com.html
+++ b/m/me/med/mediapost.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the mediapost.com privacy policy that was archived on 2001-10-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011020050427id_/http%3A//mediapost.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mediapost.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603233626id_/http%3A//www.mediapost.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>MediaPost Help</title>
@@ -38,7 +38,7 @@ a:hover	{color:0000FF;
 
 <body topmargin="0" leftmargin="0" marginwidth="0" marginheight="0" rightmargin="0" bottommargin="0" text="#000000" bgcolor="#ffffff">
 <div align="center">
-	<img height="90" width="742" src="images/hdr.gif" align="center" border="0" usemap="#Map">
+	<img height="90" width="742" src="http://www.mediapost.com/images/hdr.gif" align="center" border="0" usemap="#Map">
 	<map name="Map"><area shape="rect" coords="539,14,596,62" href="http://www.mediapost.com/eml_main.cfm"><area shape="rect" coords="599,27,658,71" href="http://www.mediapost.com/cal_processor.cfm"><area shape="rect" coords="660,32,717,83" href="http://www.mediapost.com/list_main.cfm"><area shape="rect" coords="29,21,177,77" href="http://www.mediapost.com/index.cfm"></map>
 	
 	<style type="text/css">
@@ -251,18 +251,18 @@ We have taken careful measures to secure your information.
       <td> 
         <hr align="center" noshade="" size="1" width="90%">
         <center>
-          <font face="arial," helvetica="" size="-1"><a href="submiturl1.cfm">Add a Site</a>&nbsp; <img border="0" height="6" src="images/redsquare.gif" width="8">&nbsp;<a href="kit_about_mediapost.htm">About 
-          MediaPost</a>&nbsp; <img border="0" height="6" src="images/redsquare.gif" width="8">&nbsp;<a href="register.cfm">Subscribe</a>&nbsp; 
-          <img border="0" height="6" src="images/redsquare.gif" width="8">&nbsp;<a href="kit_online_ratecard.htm">Rate 
-          Card</a>&nbsp; <img border="0" height="6" src="images/redsquare.gif" width="8">&nbsp;<a href="privacy.htm">Privacy 
-          Policy</a>&nbsp; <img border="0" height="6" src="images/redsquare.gif" width="8">&nbsp;<a href="faq.htm">Help</a></font> 
+          <font face="arial," helvetica="" size="-1"><a href="submiturl1.cfm">Add a Site</a>&nbsp; <img border="0" height="6" src="http://www.mediapost.com/images/redsquare.gif" width="8">&nbsp;<a href="kit_about_mediapost.htm">About 
+          MediaPost</a>&nbsp; <img border="0" height="6" src="http://www.mediapost.com/images/redsquare.gif" width="8">&nbsp;<a href="http://www.mediapost.com/reg/">Subscribe</a>&nbsp; 
+          <img border="0" height="6" src="http://www.mediapost.com/images/redsquare.gif" width="8">&nbsp;<a href="kit_online_ratecard.htm">Rate 
+          Card</a>&nbsp; <img border="0" height="6" src="http://www.mediapost.com/images/redsquare.gif" width="8">&nbsp;<a href="privacy.htm">Privacy 
+          Policy</a>&nbsp; <img border="0" height="6" src="http://www.mediapost.com/images/redsquare.gif" width="8">&nbsp;<a href="faq.htm">Help</a></font> 
         </center>
         <hr align="center" noshade="" size="1" width="90%">
       </td>
     </tr>
     <tr> 
       <td> 
-        <div align="center"><font face="arial," helvetica="" size="-1">©&nbsp;2001&nbsp; MediaPost&nbsp;Communications.&nbsp; 
+        <div align="center"><font face="arial," helvetica="" size="-1">©&nbsp;2002&nbsp; MediaPost&nbsp;Communications.&nbsp; 
           All rights reserved.<br>
           49&nbsp;Richmondville&nbsp;Ave.&nbsp;Suite&nbsp;112&nbsp; Westport,&nbsp; 
           Connecticut&nbsp; 06880<br>
